--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "electron ."
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.63",
     "electron": "^16.0.2"
   },
   "license": "ISC",
@@ -18,6 +19,7 @@
     "js2xmlparser": "^4.0.2",
     "node-eval": "^2.0.0",
     "replace-in-file": "^6.3.2",
+    "shelljs": "^0.8.5",
     "systeminformation": "^5.11.2",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
